--- a/VSCode/settings.json
+++ b/VSCode/settings.json
@@ -1,212 +1,151 @@
 {
-  "security.workspace.trust.untrustedFiles": "open",
-  "workbench.iconTheme": "material-icon-theme",
-  "explorer.sortOrder": "type",
-  "window.newWindowDimensions": "inherit",
-  "telemetry.enableTelemetry": false,
-  "workbench.editor.highlightModifiedTabs": true,
-  "workbench.editor.tabSizing": "shrink",
-  "workbench.colorTheme": "Community Material Theme Palenight High Contrast",
-  "editor.fontFamily": "Fira Code, Menlo, Monaco, 'Courier New', monospace",
-  "editor.fontLigatures": true,
-  "editor.fontWeight": "400",
-  "editor.minimap.enabled": true,
-  "editor.insertSpaces": true,
-  "editor.hover.delay": 500,
-  "editor.lightbulb.enabled": false,
-  "editor.renderLineHighlight": "gutter",
-  "editor.smoothScrolling": true,
-  "editor.parameterHints.enabled": false,
-  "editor.suggest.snippetsPreventQuickSuggestions": false,
-  "html.suggest.html5": false,
-  "editor.tabCompletion": "on",
-  "editor.cursorBlinking": "smooth",
-  "editor.suggest.localityBonus": true,
-  "editor.suggest.shareSuggestSelections": true,
-  "editor.suggestFontSize": 11,
-  "editor.renderWhitespace": "all",
-  "workbench.commandPalette.history": 10,
-  "breadcrumbs.filePath": "on",
-  "workbench.editor.closeOnFileDelete": true,
-  "terminal.integrated.fontWeight": "400",
-  "emmet.includeLanguages": {
-    "javascript": "javascriptreact"
-  },
-  "bracket-pair-colorizer-2.showHorizontalScopeLine": false,
-  "bracket-pair-colorizer-2.colors": ["#87a5ff", "#b087ff", "#f187ff", "#ff8787", "#87ffd3"],
-  "javascript.updateImportsOnFileMove.enabled": "always",
-  "git.autofetch": true,
-  "workbench.startupEditor": "newUntitledFile",
-  "editor.wordWrap": "on",
-  "files.trimFinalNewlines": true,
-  "solidity.formatter": "forge",
-  "solidity.defaultCompiler": "localNodeModule",
-  "solidity.telemetry": true,
-  "solidity.defaultCompiler": "localNodeModule",
-  "explorer.autoReveal": false,
-  "files.exclude": {
-    "node_modules": true
-  },
-  "[python]": {
-    "editor.tabSize": 4,
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[go]": {
-    "editor.tabSize": 2,
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[c]": {
-    "editor.tabSize": 4,
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[javascript]": {
-    "editor.tabSize": 2,
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[javascriptreact]": {
-    "editor.tabSize": 2,
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[json]": {
-    "editor.tabSize": 2,
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[mongodb]": {
-    "editor.tabSize": 2,
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[typescript]": {
-    "editor.tabSize": 2,
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[typescriptreact]": {
-    "editor.tabSize": 2,
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[vue]": {
-    "editor.tabSize": 2,
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[html]": {
-    "editor.tabSize": 2,
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[css]": {
-    "editor.tabSize": 2,
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[scss]": {
-    "editor.tabSize": 2,
-    "editor.defaultFormatter": "esbenp.prettier-vscode"
-  },
-  "[rust]": {
-    "editor.tabSize": 4
-  },
-  "[solidity]": {
-    "editor.tabSize": 4
-  },
-  "vim.leader": "<space>",
-  "vim.normalModeKeyBindingsNonRecursive": [
-    {
-      "before": [";"],
-      "commands": ["workbench.action.showCommands"]
+    "security.workspace.trust.untrustedFiles": "open",
+    "explorer.sortOrder": "type",
+    "window.newWindowDimensions": "inherit",
+    "workbench.editor.highlightModifiedTabs": true,
+    "workbench.editor.tabSizing": "shrink",
+    "editor.fontFamily": "Fira Code, Menlo, Monaco, 'Courier New', monospace",
+    "editor.fontLigatures": true,
+    "editor.fontWeight": "400",
+    "editor.minimap.enabled": true,
+    "editor.insertSpaces": true,
+    "editor.hover.delay": 500,
+    "editor.lightbulb.enabled": "off",
+    "editor.renderLineHighlight": "gutter",
+    "editor.smoothScrolling": true,
+    "editor.parameterHints.enabled": false,
+    "editor.suggest.snippetsPreventQuickSuggestions": false,
+    "html.suggest.html5": false,
+    "editor.tabCompletion": "on",
+    "editor.cursorBlinking": "smooth",
+    "editor.suggest.localityBonus": true,
+    "editor.suggest.shareSuggestSelections": true,
+    "editor.suggestFontSize": 11,
+    "editor.renderWhitespace": "all",
+    "workbench.commandPalette.history": 10,
+    "breadcrumbs.filePath": "on",
+    "workbench.editor.closeOnFileDelete": true,
+    "terminal.integrated.fontWeight": "400",
+    "editor.wordWrap": "on",
+    "files.trimFinalNewlines": true,
+    "explorer.autoReveal": false,
+    "files.exclude": {
+        "node_modules": true
     },
-    {
-      "before": ["leader", "r"],
-      "commands": ["workbench.action.files.save"]
+    "vim.leader": "<space>",
+    "vim.normalModeKeyBindingsNonRecursive": [
+        {
+            "before": [
+                ";"
+            ],
+            "commands": [
+                "workbench.action.showCommands"
+            ]
+        },
+        {
+            "before": [
+                "leader",
+                "r"
+            ],
+            "commands": [
+                "workbench.action.files.save"
+            ]
+        },
+        {
+            "before": [
+                "j"
+            ],
+            "after": [
+                "g",
+                "j"
+            ]
+        },
+        {
+            "before": [
+                "k"
+            ],
+            "after": [
+                "g",
+                "k"
+            ]
+        }
+    ],
+    "vim.visualModeKeyBindingsNonRecursive": [
+        {
+            "before": [
+                "p"
+            ],
+            "after": [
+                "p",
+                "g",
+                "v",
+                "y"
+            ]
+        }
+    ],
+    "explorer.confirmDragAndDrop": false,
+    "explorer.openEditors.visible": 5,
+    "window.zoomLevel": -1,
+    "explorer.confirmDelete": false,
+    "editor.hover.enabled": true,
+    "markdownlint.config": {
+        "MD027": false,
+        "MD028": false
     },
-    {
-      "before": ["j"],
-      "after": ["g", "j"]
+    "workbench.colorTheme": "Vira Palenight High Contrast",
+    "workbench.colorCustomizations": {
+        "[Vira*]": {
+            "toolbar.activeBackground": "#80CBC426",
+            "button.background": "#80CBC4",
+            "button.hoverBackground": "#80CBC4cc",
+            "extensionButton.separator": "#80CBC433",
+            "extensionButton.background": "#80CBC414",
+            "extensionButton.foreground": "#80CBC4",
+            "extensionButton.hoverBackground": "#80CBC433",
+            "extensionButton.prominentForeground": "#80CBC4",
+            "extensionButton.prominentBackground": "#80CBC414",
+            "extensionButton.prominentHoverBackground": "#80CBC433",
+            "activityBarBadge.background": "#80CBC4",
+            "activityBar.activeBorder": "#80CBC4",
+            "activityBarTop.activeBorder": "#80CBC4",
+            "list.inactiveSelectionIconForeground": "#80CBC4",
+            "list.activeSelectionForeground": "#80CBC4",
+            "list.inactiveSelectionForeground": "#80CBC4",
+            "list.highlightForeground": "#80CBC4",
+            "sash.hoverBorder": "#80CBC480",
+            "list.activeSelectionIconForeground": "#80CBC4",
+            "scrollbarSlider.activeBackground": "#80CBC480",
+            "editorSuggestWidget.highlightForeground": "#80CBC4",
+            "textLink.foreground": "#80CBC4",
+            "progressBar.background": "#80CBC4",
+            "pickerGroup.foreground": "#80CBC4",
+            "tab.activeBorder": "#80CBC4",
+            "tab.activeBorderTop": "#80CBC400",
+            "tab.unfocusedActiveBorder": "#80CBC4",
+            "tab.unfocusedActiveBorderTop": "#80CBC400",
+            "tab.activeModifiedBorder": "#80CBC400",
+            "notificationLink.foreground": "#80CBC4",
+            "editorWidget.resizeBorder": "#80CBC4",
+            "editorWidget.border": "#80CBC4",
+            "settings.modifiedItemIndicator": "#80CBC4",
+            "panelTitle.activeBorder": "#80CBC4",
+            "breadcrumb.activeSelectionForeground": "#80CBC4",
+            "menu.selectionForeground": "#80CBC4",
+            "menubar.selectionForeground": "#80CBC4",
+            "editor.findMatchBorder": "#80CBC4",
+            "selection.background": "#80CBC440",
+            "statusBarItem.remoteBackground": "#80CBC414",
+            "statusBarItem.remoteHoverBackground": "#80CBC4",
+            "statusBarItem.remoteForeground": "#80CBC4",
+            "notebook.inactiveFocusedCellBorder": "#80CBC480",
+            "commandCenter.activeBorder": "#80CBC480",
+            "chat.slashCommandForeground": "#80CBC4",
+            "chat.avatarForeground": "#80CBC4",
+            "activityBarBadge.foreground": "#000000",
+            "button.foreground": "#000000",
+            "statusBarItem.remoteHoverForeground": "#000000"
+        }
     },
-    {
-      "before": ["k"],
-      "after": ["g", "k"]
-    }
-  ],
-  "vim.visualModeKeyBindingsNonRecursive": [
-    {
-      "before": ["p"],
-      "after": ["p", "g", "v", "y"]
-    }
-  ],
-  "explorer.confirmDragAndDrop": false,
-  "explorer.openEditors.visible": 5,
-  "terminal.integrated.rendererType": "dom",
-  "gitlens.views.repositories.location": "gitlens",
-  "gitlens.views.fileHistory.location": "gitlens",
-  "gitlens.views.lineHistory.location": "gitlens",
-  "gitlens.views.compare.location": "gitlens",
-  "gitlens.views.search.location": "gitlens",
-  "gitlens.currentLine.enabled": false,
-  "gitlens.hovers.currentLine.over": "line",
-  "gitlens.blame.heatmap.enabled": false,
-  "gitlens.blame.highlight.enabled": false,
-  "gitlens.hovers.enabled": false,
-  "gitlens.codeLens.enabled": false,
-  "gitlens.statusBar.enabled": false,
-  "gitlens.views.repositories.enabled": false,
-  "gitlens.views.search.enabled": false,
-  "gitlens.mode.statusBar.enabled": false,
-  "explorer.confirmDelete": false,
-  "editor.hover.enabled": true,
-  "git.enableSmartCommit": true,
-  "workbench.colorCustomizations": {
-    "activityBarBadge.background": "#2979FF",
-    "activityBar.activeBorder": "#2979FF",
-    "list.activeSelectionForeground": "#2979FF",
-    "list.inactiveSelectionForeground": "#2979FF",
-    "list.highlightForeground": "#2979FF",
-    "scrollbarSlider.activeBackground": "#2979FF50",
-    "editorSuggestWidget.highlightForeground": "#2979FF",
-    "textLink.foreground": "#2979FF",
-    "progressBar.background": "#2979FF",
-    "pickerGroup.foreground": "#2979FF",
-    "tab.activeBorder": "#2979FF",
-    "notificationLink.foreground": "#2979FF",
-    "editorWidget.resizeBorder": "#2979FF",
-    "editorWidget.border": "#2979FF",
-    "settings.modifiedItemIndicator": "#2979FF",
-    "settings.headerForeground": "#2979FF",
-    "panelTitle.activeBorder": "#2979FF",
-    "breadcrumb.activeSelectionForeground": "#2979FF",
-    "menu.selectionForeground": "#2979FF",
-    "menubar.selectionForeground": "#2979FF",
-    "editor.findMatchBorder": "#2979FF",
-    "selection.background": "#2979FF40"
-  },
-  "editor.codeActionsOnSave": {
-    "source.fixAll": false
-  },
-  "prettier.resolveGlobalModules": true,
-  "prettier.printWidth": 100,
-  "editor.formatOnSave": true,
-  "python.linting.enabled": false,
-  "python.linting.lintOnSave": false,
-  "python.linting.pylintEnabled": false,
-  "python.venvPath": "/Users/jordan/.local/share/virtualenvs",
-  "markdownlint.config": {
-    "MD027": false,
-    "MD028": false
-  },
-  "python.languageServer": "Default",
-  "diffEditor.ignoreTrimWhitespace": false,
-  "typescript.updateImportsOnFileMove.enabled": "always",
-  "workbench.editorAssociations": {
-    "*.ipynb": "jupyter.notebook.ipynb"
-  },
-  "editor.tabSize": 8,
-  "editor.cursorStyle": "line",
-  "editor.lineNumbers": "on",
-  "editor.wordSeparators": "/\\()\"':,.;<>~!@#$%^&*|+=[]{}`?-",
-  "editor.largeFileOptimizations": false,
-  "workbench.statusBar.visible": false,
-  "git.confirmSync": false,
-  "editor.inlineSuggest.enabled": true,
-  "vsicons.dontShowNewVersionMessage": true,
-  "git.openRepositoryInParentFolders": "never",
-  "solidity.remappingsUnix": ["@openzeppelin/=lib/openzeppelin-contracts/"],
-  "solidity.compileUsingRemoteVersion": "v0.8.18+commit.87f61d96",
-  "tsImportSorter.configuration.wrappingStyle": "prettier",
-  "window.zoomLevel": -1
+    "workbench.iconTheme": "vira-icons-palenight",
+    "editor.formatOnSave": true
 }
